crates/k-rust/tests/snapshots/inner_parser__apply_priority_checks_only_selected_arguments.snap
---
source: crates/k-rust/tests/inner_parser.rs
expression: "grammar.parse(&Sort::new(\"Exp\"), \"f(a, b + c, a)\")"
---
Err(
    Priority {
        parent: "f",
        child: "plus",
    },
)
