crates/k-rust/tests/snapshots/inner_parser__matches_scala_global_scanner_winner_rules.snap
---
source: crates/k-rust/tests/inner_parser.rs
expression: parsed
---
[
    Ok(
        Apply {
            label: Label {
                name: "longTerminal",
                parameters: [],
            },
            arguments: [],
        },
    ),
    Ok(
        Apply {
            label: Label {
                name: "keyword",
                parameters: [],
            },
            arguments: [],
        },
    ),
    Ok(
        Apply {
            label: Label {
                name: "pair",
                parameters: [],
            },
            arguments: [],
        },
    ),
    Ok(
        Apply {
            label: Label {
                name: "longer",
                parameters: [],
            },
            arguments: [],
        },
    ),
    Ok(
        Apply {
            label: Label {
                name: "longestAlternative",
                parameters: [],
            },
            arguments: [],
        },
    ),
]
