crates/k-rust/tests/snapshots/inner_parser__matches_scala_module_defined_layout_selection.snap
---
source: crates/k-rust/tests/inner_parser.rs
expression: results
---
[
    Ok(
        Apply {
            label: Label {
                name: "x",
                parameters: [],
            },
            arguments: [],
        },
    ),
    Ok(
        Apply {
            label: Label {
                name: "x",
                parameters: [],
            },
            arguments: [],
        },
    ),
    Err(
        NoParse {
            position: 0,
            expected: [
                "\"x\"",
            ],
        },
    ),
    Ok(
        Apply {
            label: Label {
                name: "x",
                parameters: [],
            },
            arguments: [],
        },
    ),
    Err(
        NoParse {
            position: 0,
            expected: [
                "\"x\"",
            ],
        },
    ),
]
