crates/k-rust/tests/snapshots/inner_parser__module_defined_layout_rejects_default_comments.snap
---
source: crates/k-rust/tests/inner_parser.rs
assertion_line: 462
description: "Input parsed as Start:\n\n/* not custom */ x"
---
Err(
    NoParse {
        position: 0,
        expected: [
            "\"x\"",
        ],
        input: UnrecognizedInput {
            value: "/",
        },
        previous: None,
        span: None,
    },
)
