crates/k-rust/tests/snapshots/inner_parser__production_free_layout_allows_adjacent_tokens.snap
---
source: crates/k-rust/tests/inner_parser.rs
description: "Input parsed as Start:\n\nx"
---
Ok(
    Apply {
        label: Label {
            name: "x",
            parameters: [],
        },
        arguments: [],
    },
)
