crates/k-rust/tests/snapshots/inner_parser__production_free_layout_rejects_whitespace.snap
---
source: crates/k-rust/tests/inner_parser.rs
assertion_line: 474
description: "Input parsed as Start:\n\n x"
---
Err(
    NoParse {
        position: 0,
        expected: [
            "\"x\"",
        ],
        input: UnrecognizedInput {
            value: " ",
        },
        previous: None,
        span: None,
    },
)
