crates/k-rust/tests/snapshots/inner_parser__rejects_invalid_or_empty_layout_productions.snap
---
source: crates/k-rust/tests/inner_parser.rs
expression: "[Grammar::from_sentences(&invalid).unwrap_err(),\nGrammar::from_sentences(&empty).unwrap_err(),]"
---
[
    InvalidLayoutProduction,
    EmptyLayout,
]
