crates/k-rust/tests/snapshots/inner_parser__rejects_non_associative_nesting.snap
---
source: crates/k-rust/tests/inner_parser.rs
description: "Input parsed as Exp:\n\na < b < c"
---
Err(
    Associativity {
        parent: "lessThan",
        child: "lessThan",
        side: "left",
    },
)
