crates/k-rust/tests/snapshots/inner_parser__scanner_prefers_a_literal_on_an_equal_length_match.snap
---
source: crates/k-rust/tests/inner_parser.rs
description: "Input parsed as Start:\n\nif"
---
Ok(
    Apply {
        label: Label {
            name: "keyword",
            parameters: [],
        },
        arguments: [],
    },
)
