crates/k-rust/tests/snapshots/inner_parser__scanner_prefers_match_length_over_precedence.snap
---
source: crates/k-rust/tests/inner_parser.rs
description: "Input parsed as Start:\n\nabc"
---
Ok(
    Apply {
        label: Label {
            name: "longer",
            parameters: [],
        },
        arguments: [],
    },
)
