crates/k-rust/tests/snapshots/inner_parser__scanner_prefers_the_longer_terminal.snap
---
source: crates/k-rust/tests/inner_parser.rs
description: "Input parsed as Start:\n\n=="
---
Ok(
    Apply {
        label: Label {
            name: "longTerminal",
            parameters: [],
        },
        arguments: [],
    },
)
