crates/k-rust/tests/snapshots/inner_parser__scanner_uses_precedence_to_break_equal_length_regex_ties.snap
---
source: crates/k-rust/tests/inner_parser.rs
description: "Input parsed as Start:\n\nab"
---
Ok(
    Apply {
        label: Label {
            name: "pair",
            parameters: [],
        },
        arguments: [],
    },
)
